# fdscore

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRACTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: api.md  assumptions-and-limits.md  compatibility.md  concepts.md  conf.py  examples.md  index.md  installation.md  quickstart.md  references.md  requirements-docs.txt  theory.md
examples/: README.md  __init__.py  _common.py  minimal_fds_spectral.py  minimal_fds_time.py  minimal_inversion_and_metrics.py
fdscore/: __init__.py  _dirlik.py  _ers_incremental.py  _fds_incremental.py  _inversion_utils.py  _psd_utils.py  _shock_iir.py  _shock_signal.py  _time_plan.py  deterministic.py  ers_ops.py  ers_spectral.py  ers_time.py  fds_ops.py  fds_spectral.py  fds_time.py  grid.py  inverse_closed_form.py  inverse_iterative_spectral.py  inverse_iterative_time.py  metrics.py  preprocess.py  psd_welch.py  rainflow_damage.py  sdof_pv.py  sdof_transfer.py  shock.py  shock_events.py  shock_half_sine.py  shock_ops.py  shock_rolling.py  synth_time.py  types.py  validate.py
tests/: test_contracts_compat.py  test_dwell_profiles.py  test_ers_sine.py  test_ers_spectral.py  test_ers_time.py  test_examples_run.py  test_fds_ops_provenance.py  test_fds_sine.py  test_fds_time_basic.py  test_fds_time_plan.py  test_import.py  test_internal_cleanup.py  test_internal_shared_helpers.py  test_inverse_closed_form_roundtrip.py  test_iterative_diagnostics.py  test_iterative_inversion_smoke.py  test_iterative_inversion_time_smoke.py  test_iterative_param_usage.py  test_metrics_run.py  (+14 more)
(+12 files in other folders)
