[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdscore"
version = "0.2.0"
description = "Core numerical library for Fatigue Damage Spectrum (FDS) and closed-form inversion."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Brenick Resende"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "numba>=0.58"
]

[project.urls]
Homepage = "https://github.com/brenickra/fdscore"
Repository = "https://github.com/brenickra/fdscore"
Issues = "https://github.com/brenickra/fdscore/issues"

[project.optional-dependencies]
spectral = [
  "FLife"
]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0",
  "mypy>=1.0"
]

[tool.setuptools]
packages = ["fdscore"]
